--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="home_fragment">Home Fragment</string>
     <string name="chat">Chat</string>
     <string name="send">Send</string>
+    <string name="receive">Receive</string>
 </resources>
